parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> decllist
Rule 2     decllist -> decl decllist
Rule 3     decllist -> decl
Rule 4     decl -> funcdecl
Rule 5     decl -> vardecl
Rule 6     vardecl -> ID subvardecl exp0 SEMICOLON
Rule 7     vardecl -> ID subvardecl2
Rule 8     vardecl -> ID COLON typeof SEMICOLON
Rule 9     subvardecl -> COLON typeof ASSIGNMENT
Rule 10    subvardecl -> COMMA ID subvardecl exp0 COMMA
Rule 11    subvardecl2 -> COMMA ID subvardecl3
Rule 12    subvardecl3 -> COLON typeof SEMICOLON
Rule 13    idlist -> ID
Rule 14    idlist -> ID COMMA idlist
Rule 15    typeof -> arrtype
Rule 16    typeof -> atotype
Rule 17    typeof -> AUTO
Rule 18    atotype -> STRING
Rule 19    atotype -> FLOAT
Rule 20    atotype -> INTEGER
Rule 21    atotype -> BOOLEAN
Rule 22    arrtype -> ARRAY LBRACKET dime RBRACKET OF atotype
Rule 23    dime -> INTLIT
Rule 24    dime -> INTLIT COMMA dime
Rule 25    returntype -> arrtype
Rule 26    returntype -> atotype
Rule 27    returntype -> VOID
Rule 28    returntype -> AUTO
Rule 29    funcdecl -> ID COLON FUNCTION returntype paramdecl INHERIT ID blockstmt
Rule 30    funcdecl -> ID COLON FUNCTION returntype paramdecl blockstmt
Rule 31    paramdecl -> LPAREN paramlist RPAREN
Rule 32    paramlist -> empty
Rule 33    paramlist -> paramprime
Rule 34    paramprime -> param
Rule 35    paramprime -> param COMMA paramprime
Rule 36    param -> OUT ID COLON typeof
Rule 37    param -> INHERIT ID COLON typeof
Rule 38    param -> ID COLON typeof
Rule 39    param -> INHERIT OUT ID COLON typeof
Rule 40    stmtlist -> empty
Rule 41    stmtlist -> stmtprime
Rule 42    stmtprime -> stmt
Rule 43    stmtprime -> vardecl
Rule 44    stmtprime -> vardecl stmtlist
Rule 45    stmtprime -> stmt stmtlist
Rule 46    stmt -> matchstmt
Rule 47    stmt -> unmatchif
Rule 48    matchstmt -> blockstmt
Rule 49    matchstmt -> callstmt
Rule 50    matchstmt -> retstmt
Rule 51    matchstmt -> contistmt
Rule 52    matchstmt -> breakstmt
Rule 53    matchstmt -> dowhilestmt
Rule 54    matchstmt -> whilestmt
Rule 55    matchstmt -> forstmt
Rule 56    matchstmt -> matchif
Rule 57    matchstmt -> assigstmt
Rule 58    assigstmt -> ID ASSIGNMENT exp0 SEMICOLON
Rule 59    assigstmt -> ID LBRACKET expprime RBRACKET ASSIGNMENT exp0 SEMICOLON
Rule 60    matchif -> IF LPAREN exp0 RPAREN matchstmt ELSE matchstmt
Rule 61    unmatchif -> IF LPAREN exp0 RPAREN stmt
Rule 62    unmatchif -> IF LPAREN exp0 RPAREN matchstmt ELSE unmatchif
Rule 63    forstmt -> FOR LPAREN scaladecl COMMA condifor COMMA updatefor RPAREN stmt
Rule 64    scaladecl -> scalavar ASSIGNMENT exp0
Rule 65    scalavar -> ID
Rule 66    condifor -> exp0
Rule 67    updatefor -> exp0
Rule 68    whilestmt -> WHILE whilecondi stmt
Rule 69    whilecondi -> LPAREN exp0 RPAREN
Rule 70    dowhilestmt -> DO blockstmt WHILE LPAREN exp0 RPAREN SEMICOLON
Rule 71    breakstmt -> BREAK SEMICOLON
Rule 72    contistmt -> CONTINUE SEMICOLON
Rule 73    retstmt -> RETURN SEMICOLON
Rule 74    retstmt -> RETURN exp0 SEMICOLON
Rule 75    callstmt -> ID LPAREN explist RPAREN SEMICOLON
Rule 76    blockstmt -> LBRACE stmtlist RBRACE
Rule 77    funcall -> ID LPAREN explist RPAREN
Rule 78    arraylit -> LBRACE explist RBRACE
Rule 79    explist -> empty
Rule 80    explist -> expprime
Rule 81    expprime -> exp0
Rule 82    expprime -> exp0 COMMA expprime
Rule 83    exp1 -> exp2
Rule 84    exp1 -> exp2 EQUAL exp2
Rule 85    exp1 -> exp2 NOTEQUAL exp2
Rule 86    exp1 -> exp2 LESSTHAN exp2
Rule 87    exp1 -> exp2 LEQ exp2
Rule 88    exp1 -> exp2 GREATERTHAN exp2
Rule 89    exp1 -> exp2 GEQ exp2
Rule 90    exp1 -> exp1 DOUBLECOLON exp1
Rule 91    exp0 -> exp1
Rule 92    exp2 -> exp3
Rule 93    exp2 -> exp2 AND exp3
Rule 94    exp2 -> exp2 OR exp3
Rule 95    exp4 -> exp5
Rule 96    exp4 -> exp4 MUL exp5
Rule 97    exp4 -> exp4 DIV exp5
Rule 98    exp4 -> exp4 MOD exp5
Rule 99    exp4 -> exp3 PLUS exp4
Rule 100   exp4 -> exp3 MINUS exp4
Rule 101   exp3 -> exp4
Rule 102   exp5 -> exp6
Rule 103   exp5 -> NOT exp5
Rule 104   exp6 -> exp7
Rule 105   exp6 -> MINUS exp6
Rule 106   exp7 -> exp8
Rule 107   exp7 -> ID LBRACKET expprime RBRACKET
Rule 108   exp8 -> exp9
Rule 109   exp8 -> funcall
Rule 110   exp9 -> exp10
Rule 111   exp9 -> arraylit
Rule 112   exp9 -> ID
Rule 113   exp9 -> STRINGLIT
Rule 114   exp9 -> BOOLEANLIT
Rule 115   exp9 -> FLOATLIT
Rule 116   exp9 -> INTLIT
Rule 117   exp10 -> LPAREN exp0 RPAREN
Rule 118   empty -> <empty>

Unused terminals:

    CPP_COMMENT

Terminals, with rules where they appear:

AND                  : 93
ARRAY                : 22
ASSIGNMENT           : 9 58 59 64
AUTO                 : 17 28
BOOLEAN              : 21
BOOLEANLIT           : 114
BREAK                : 71
COLON                : 8 9 12 29 30 36 37 38 39
COMMA                : 10 10 11 14 24 35 63 63 82
CONTINUE             : 72
CPP_COMMENT          : 
DIV                  : 97
DO                   : 70
DOUBLECOLON          : 90
ELSE                 : 60 62
EQUAL                : 84
FLOAT                : 19
FLOATLIT             : 115
FOR                  : 63
FUNCTION             : 29 30
GEQ                  : 89
GREATERTHAN          : 88
ID                   : 6 7 8 10 11 13 14 29 29 30 36 37 38 39 58 59 65 75 77 107 112
IF                   : 60 61 62
INHERIT              : 29 37 39
INTEGER              : 20
INTLIT               : 23 24 116
LBRACE               : 76 78
LBRACKET             : 22 59 107
LEQ                  : 87
LESSTHAN             : 86
LPAREN               : 31 60 61 62 63 69 70 75 77 117
MINUS                : 100 105
MOD                  : 98
MUL                  : 96
NOT                  : 103
NOTEQUAL             : 85
OF                   : 22
OR                   : 94
OUT                  : 36 39
PLUS                 : 99
RBRACE               : 76 78
RBRACKET             : 22 59 107
RETURN               : 73 74
RPAREN               : 31 60 61 62 63 69 70 75 77 117
SEMICOLON            : 6 8 12 58 59 70 71 72 73 74 75
STRING               : 18
STRINGLIT            : 113
VOID                 : 27
WHILE                : 68 70
error                : 

Nonterminals, with rules where they appear:

arraylit             : 111
arrtype              : 15 25
assigstmt            : 57
atotype              : 16 22 26
blockstmt            : 29 30 48 70
breakstmt            : 52
callstmt             : 49
condifor             : 63
contistmt            : 51
decl                 : 2 3
decllist             : 1 2
dime                 : 22 24
dowhilestmt          : 53
empty                : 32 40 79
exp0                 : 6 10 58 59 60 61 62 64 66 67 69 70 74 81 82 117
exp1                 : 90 90 91
exp10                : 110
exp2                 : 83 84 84 85 85 86 86 87 87 88 88 89 89 93 94
exp3                 : 92 93 94 99 100
exp4                 : 96 97 98 99 100 101
exp5                 : 95 96 97 98 103
exp6                 : 102 105
exp7                 : 104
exp8                 : 106
exp9                 : 108
explist              : 75 77 78
expprime             : 59 80 82 107
forstmt              : 55
funcall              : 109
funcdecl             : 4
idlist               : 14
matchif              : 56
matchstmt            : 46 60 60 62
param                : 34 35
paramdecl            : 29 30
paramlist            : 31
paramprime           : 33 35
program              : 0
retstmt              : 50
returntype           : 29 30
scaladecl            : 63
scalavar             : 64
stmt                 : 42 45 61 63 68
stmtlist             : 44 45 76
stmtprime            : 41
subvardecl           : 6 10
subvardecl2          : 7
subvardecl3          : 11
typeof               : 8 9 12 36 37 38 39
unmatchif            : 47 62
updatefor            : 63
vardecl              : 5 43 44
whilecondi           : 68
whilestmt            : 54


state 0

    (0) S' -> . program
    (1) program -> . decllist
    (2) decllist -> . decl decllist
    (3) decllist -> . decl
    (4) decl -> . funcdecl
    (5) decl -> . vardecl
    (29) funcdecl -> . ID COLON FUNCTION returntype paramdecl INHERIT ID blockstmt
    (30) funcdecl -> . ID COLON FUNCTION returntype paramdecl blockstmt
    (6) vardecl -> . ID subvardecl exp0 SEMICOLON
    (7) vardecl -> . ID subvardecl2
    (8) vardecl -> . ID COLON typeof SEMICOLON
    ID              shift and go to state 6

    program                        shift and go to state 1
    decllist                       shift and go to state 2
    decl                           shift and go to state 3
    funcdecl                       shift and go to state 4
    vardecl                        shift and go to state 5

state 1

    (0) S' -> program .


state 2

    (1) program -> decllist .
    $end            reduce using rule 1 (program -> decllist .)


state 3

    (2) decllist -> decl . decllist
    (3) decllist -> decl .
    (2) decllist -> . decl decllist
    (3) decllist -> . decl
    (4) decl -> . funcdecl
    (5) decl -> . vardecl
    (29) funcdecl -> . ID COLON FUNCTION returntype paramdecl INHERIT ID blockstmt
    (30) funcdecl -> . ID COLON FUNCTION returntype paramdecl blockstmt
    (6) vardecl -> . ID subvardecl exp0 SEMICOLON
    (7) vardecl -> . ID subvardecl2
    (8) vardecl -> . ID COLON typeof SEMICOLON
    $end            reduce using rule 3 (decllist -> decl .)
    ID              shift and go to state 6

    decl                           shift and go to state 3
    decllist                       shift and go to state 7
    funcdecl                       shift and go to state 4
    vardecl                        shift and go to state 5

state 4

    (4) decl -> funcdecl .
    ID              reduce using rule 4 (decl -> funcdecl .)
    $end            reduce using rule 4 (decl -> funcdecl .)


state 5

    (5) decl -> vardecl .
    ID              reduce using rule 5 (decl -> vardecl .)
    $end            reduce using rule 5 (decl -> vardecl .)


state 6

    (29) funcdecl -> ID . COLON FUNCTION returntype paramdecl INHERIT ID blockstmt
    (30) funcdecl -> ID . COLON FUNCTION returntype paramdecl blockstmt
    (6) vardecl -> ID . subvardecl exp0 SEMICOLON
    (7) vardecl -> ID . subvardecl2
    (8) vardecl -> ID . COLON typeof SEMICOLON
    (9) subvardecl -> . COLON typeof ASSIGNMENT
    (10) subvardecl -> . COMMA ID subvardecl exp0 COMMA
    (11) subvardecl2 -> . COMMA ID subvardecl3
    COLON           shift and go to state 8
    COMMA           shift and go to state 11

    subvardecl                     shift and go to state 9
    subvardecl2                    shift and go to state 10

state 7

    (2) decllist -> decl decllist .
    $end            reduce using rule 2 (decllist -> decl decllist .)


state 8

    (29) funcdecl -> ID COLON . FUNCTION returntype paramdecl INHERIT ID blockstmt
    (30) funcdecl -> ID COLON . FUNCTION returntype paramdecl blockstmt
    (8) vardecl -> ID COLON . typeof SEMICOLON
    (9) subvardecl -> COLON . typeof ASSIGNMENT
    (15) typeof -> . arrtype
    (16) typeof -> . atotype
    (17) typeof -> . AUTO
    (22) arrtype -> . ARRAY LBRACKET dime RBRACKET OF atotype
    (18) atotype -> . STRING
    (19) atotype -> . FLOAT
    (20) atotype -> . INTEGER
    (21) atotype -> . BOOLEAN
    FUNCTION        shift and go to state 12
    AUTO            shift and go to state 16
    ARRAY           shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20
    BOOLEAN         shift and go to state 21

    typeof                         shift and go to state 13
    arrtype                        shift and go to state 14
    atotype                        shift and go to state 15

state 9

    (6) vardecl -> ID subvardecl . exp0 SEMICOLON
    (91) exp0 -> . exp1
    (83) exp1 -> . exp2
    (84) exp1 -> . exp2 EQUAL exp2
    (85) exp1 -> . exp2 NOTEQUAL exp2
    (86) exp1 -> . exp2 LESSTHAN exp2
    (87) exp1 -> . exp2 LEQ exp2
    (88) exp1 -> . exp2 GREATERTHAN exp2
    (89) exp1 -> . exp2 GEQ exp2
    (90) exp1 -> . exp1 DOUBLECOLON exp1
    (92) exp2 -> . exp3
    (93) exp2 -> . exp2 AND exp3
    (94) exp2 -> . exp2 OR exp3
    (101) exp3 -> . exp4
    (95) exp4 -> . exp5
    (96) exp4 -> . exp4 MUL exp5
    (97) exp4 -> . exp4 DIV exp5
    (98) exp4 -> . exp4 MOD exp5
    (99) exp4 -> . exp3 PLUS exp4
    (100) exp4 -> . exp3 MINUS exp4
    (102) exp5 -> . exp6
    (103) exp5 -> . NOT exp5
    (104) exp6 -> . exp7
    (105) exp6 -> . MINUS exp6
    (106) exp7 -> . exp8
    (107) exp7 -> . ID LBRACKET expprime RBRACKET
    (108) exp8 -> . exp9
    (109) exp8 -> . funcall
    (110) exp9 -> . exp10
    (111) exp9 -> . arraylit
    (112) exp9 -> . ID
    (113) exp9 -> . STRINGLIT
    (114) exp9 -> . BOOLEANLIT
    (115) exp9 -> . FLOATLIT
    (116) exp9 -> . INTLIT
    (77) funcall -> . ID LPAREN explist RPAREN
    (117) exp10 -> . LPAREN exp0 RPAREN
    (78) arraylit -> . LBRACE explist RBRACE
    NOT             shift and go to state 31
    MINUS           shift and go to state 29
    ID              shift and go to state 22
    STRINGLIT       shift and go to state 38
    BOOLEANLIT      shift and go to state 39
    FLOATLIT        shift and go to state 40
    INTLIT          shift and go to state 41
    LPAREN          shift and go to state 42
    LBRACE          shift and go to state 43

    exp0                           shift and go to state 23
    exp1                           shift and go to state 24
    exp2                           shift and go to state 25
    exp3                           shift and go to state 26
    exp4                           shift and go to state 27
    exp5                           shift and go to state 28
    exp6                           shift and go to state 30
    exp7                           shift and go to state 32
    exp8                           shift and go to state 33
    exp9                           shift and go to state 34
    funcall                        shift and go to state 35
    exp10                          shift and go to state 36
    arraylit                       shift and go to state 37

state 10

    (7) vardecl -> ID subvardecl2 .
    ID              reduce using rule 7 (vardecl -> ID subvardecl2 .)
    $end            reduce using rule 7 (vardecl -> ID subvardecl2 .)
    IF              reduce using rule 7 (vardecl -> ID subvardecl2 .)
    LBRACE          reduce using rule 7 (vardecl -> ID subvardecl2 .)
    RETURN          reduce using rule 7 (vardecl -> ID subvardecl2 .)
    CONTINUE        reduce using rule 7 (vardecl -> ID subvardecl2 .)
    BREAK           reduce using rule 7 (vardecl -> ID subvardecl2 .)
    DO              reduce using rule 7 (vardecl -> ID subvardecl2 .)
    WHILE           reduce using rule 7 (vardecl -> ID subvardecl2 .)
    FOR             reduce using rule 7 (vardecl -> ID subvardecl2 .)
    RBRACE          reduce using rule 7 (vardecl -> ID subvardecl2 .)


state 11

    (10) subvardecl -> COMMA . ID subvardecl exp0 COMMA
    (11) subvardecl2 -> COMMA . ID subvardecl3
    ID              shift and go to state 44


state 12

    (29) funcdecl -> ID COLON FUNCTION . returntype paramdecl INHERIT ID blockstmt
    (30) funcdecl -> ID COLON FUNCTION . returntype paramdecl blockstmt
    (25) returntype -> . arrtype
    (26) returntype -> . atotype
    (27) returntype -> . VOID
    (28) returntype -> . AUTO
    (22) arrtype -> . ARRAY LBRACKET dime RBRACKET OF atotype
    (18) atotype -> . STRING
    (19) atotype -> . FLOAT
    (20) atotype -> . INTEGER
    (21) atotype -> . BOOLEAN
    VOID            shift and go to state 48
    AUTO            shift and go to state 49
    ARRAY           shift and go to state 17
    STRING          shift and go to state 18
    FLOAT           shift and go to state 19
    INTEGER         shift and go to state 20
    BOOLEAN         shift and go to state 21

    returntype                     shift and go to state 45
    arrtype                        shift and go to state 46
    atotype                        shift and go to state 47

state 13

    (8) vardecl -> ID COLON typeof . SEMICOLON
    (9) subvardecl -> COLON typeof . ASSIGNMENT
    SEMICOLON       shift and go to state 50
    ASSIGNMENT      shift and go to state 51


state 14

    (15) typeof -> arrtype .
    SEMICOLON       reduce using rule 15 (typeof -> arrtype .)
    ASSIGNMENT      reduce using rule 15 (typeof -> arrtype .)
    COMMA           reduce using rule 15 (typeof -> arrtype .)
    RPAREN          reduce using rule 15 (typeof -> arrtype .)


state 15

    (16) typeof -> atotype .
    SEMICOLON       reduce using rule 16 (typeof -> atotype .)
    ASSIGNMENT      reduce using rule 16 (typeof -> atotype .)
    COMMA           reduce using rule 16 (typeof -> atotype .)
    RPAREN          reduce using rule 16 (typeof -> atotype .)


state 16

    (17) typeof -> AUTO .
    SEMICOLON       reduce using rule 17 (typeof -> AUTO .)
    ASSIGNMENT      reduce using rule 17 (typeof -> AUTO .)
    COMMA           reduce using rule 17 (typeof -> AUTO .)
    RPAREN          reduce using rule 17 (typeof -> AUTO .)


state 17

    (22) arrtype -> ARRAY . LBRACKET dime RBRACKET OF atotype
    LBRACKET        shift and go to state 52


state 18

    (18) atotype -> STRING .
    SEMICOLON       reduce using rule 18 (atotype -> STRING .)
    ASSIGNMENT      reduce using rule 18 (atotype -> STRING .)
    LPAREN          reduce using rule 18 (atotype -> STRING .)
    COMMA           reduce using rule 18 (atotype -> STRING .)
    RPAREN          reduce using rule 18 (atotype -> STRING .)


state 19

    (19) atotype -> FLOAT .
    SEMICOLON       reduce using rule 19 (atotype -> FLOAT .)
    ASSIGNMENT      reduce using rule 19 (atotype -> FLOAT .)
    LPAREN          reduce using rule 19 (atotype -> FLOAT .)
    COMMA           reduce using rule 19 (atotype -> FLOAT .)
    RPAREN          reduce using rule 19 (atotype -> FLOAT .)


state 20

    (20) atotype -> INTEGER .
    SEMICOLON       reduce using rule 20 (atotype -> INTEGER .)
    ASSIGNMENT      reduce using rule 20 (atotype -> INTEGER .)
    LPAREN          reduce using rule 20 (atotype -> INTEGER .)
    COMMA           reduce using rule 20 (atotype -> INTEGER .)
    RPAREN          reduce using rule 20 (atotype -> INTEGER .)


state 21

    (21) atotype -> BOOLEAN .
    SEMICOLON       reduce using rule 21 (atotype -> BOOLEAN .)
    ASSIGNMENT      reduce using rule 21 (atotype -> BOOLEAN .)
    LPAREN          reduce using rule 21 (atotype -> BOOLEAN .)
    COMMA           reduce using rule 21 (atotype -> BOOLEAN .)
    RPAREN          reduce using rule 21 (atotype -> BOOLEAN .)


state 22

    (107) exp7 -> ID . LBRACKET expprime RBRACKET
    (112) exp9 -> ID .
    (77) funcall -> ID . LPAREN explist RPAREN
    LBRACKET        shift and go to state 53
    MUL             reduce using rule 112 (exp9 -> ID .)
    DIV             reduce using rule 112 (exp9 -> ID .)
    MOD             reduce using rule 112 (exp9 -> ID .)
    PLUS            reduce using rule 112 (exp9 -> ID .)
    MINUS           reduce using rule 112 (exp9 -> ID .)
    EQUAL           reduce using rule 112 (exp9 -> ID .)
    NOTEQUAL        reduce using rule 112 (exp9 -> ID .)
    LESSTHAN        reduce using rule 112 (exp9 -> ID .)
    LEQ             reduce using rule 112 (exp9 -> ID .)
    GREATERTHAN     reduce using rule 112 (exp9 -> ID .)
    GEQ             reduce using rule 112 (exp9 -> ID .)
    AND             reduce using rule 112 (exp9 -> ID .)
    OR              reduce using rule 112 (exp9 -> ID .)
    DOUBLECOLON     reduce using rule 112 (exp9 -> ID .)
    SEMICOLON       reduce using rule 112 (exp9 -> ID .)
    RPAREN          reduce using rule 112 (exp9 -> ID .)
    COMMA           reduce using rule 112 (exp9 -> ID .)
    RBRACE          reduce using rule 112 (exp9 -> ID .)
    RBRACKET        reduce using rule 112 (exp9 -> ID .)
    LPAREN          shift and go to state 54


state 23

    (6) vardecl -> ID subvardecl exp0 . SEMICOLON
    SEMICOLON       shift and go to state 55


state 24

    (91) exp0 -> exp1 .
    (90) exp1 -> exp1 . DOUBLECOLON exp1
    SEMICOLON       reduce using rule 91 (exp0 -> exp1 .)
    RPAREN          reduce using rule 91 (exp0 -> exp1 .)
    COMMA           reduce using rule 91 (exp0 -> exp1 .)
    RBRACE          reduce using rule 91 (exp0 -> exp1 .)
    RBRACKET        reduce using rule 91 (exp0 -> exp1 .)
    DOUBLECOLON     shift and go to state 56


state 25

    (83) exp1 -> exp2 .
    (84) exp1 -> exp2 . EQUAL exp2
    (85) exp1 -> exp2 . NOTEQUAL exp2
    (86) exp1 -> exp2 . LESSTHAN exp2
    (87) exp1 -> exp2 . LEQ exp2
    (88) exp1 -> exp2 . GREATERTHAN exp2
    (89) exp1 -> exp2 . GEQ exp2
    (93) exp2 -> exp2 . AND exp3
    (94) exp2 -> exp2 . OR exp3
    DOUBLECOLON     reduce using rule 83 (exp1 -> exp2 .)
    SEMICOLON       reduce using rule 83 (exp1 -> exp2 .)
    RPAREN          reduce using rule 83 (exp1 -> exp2 .)
    COMMA           reduce using rule 83 (exp1 -> exp2 .)
    RBRACE          reduce using rule 83 (exp1 -> exp2 .)
    RBRACKET        reduce using rule 83 (exp1 -> exp2 .)
    EQUAL           shift and go to state 57
    NOTEQUAL        shift and go to state 58
    LESSTHAN        shift and go to state 59
    LEQ             shift and go to state 60
    GREATERTHAN     shift and go to state 61
    GEQ             shift and go to state 62
    AND             shift and go to state 63
    OR              shift and go to state 64


state 26

    (92) exp2 -> exp3 .
    (99) exp4 -> exp3 . PLUS exp4
    (100) exp4 -> exp3 . MINUS exp4
    EQUAL           reduce using rule 92 (exp2 -> exp3 .)
    NOTEQUAL        reduce using rule 92 (exp2 -> exp3 .)
    LESSTHAN        reduce using rule 92 (exp2 -> exp3 .)
    LEQ             reduce using rule 92 (exp2 -> exp3 .)
    GREATERTHAN     reduce using rule 92 (exp2 -> exp3 .)
    GEQ             reduce using rule 92 (exp2 -> exp3 .)
    AND             reduce using rule 92 (exp2 -> exp3 .)
    OR              reduce using rule 92 (exp2 -> exp3 .)
    DOUBLECOLON     reduce using rule 92 (exp2 -> exp3 .)
    SEMICOLON       reduce using rule 92 (exp2 -> exp3 .)
    RPAREN          reduce using rule 92 (exp2 -> exp3 .)
    COMMA           reduce using rule 92 (exp2 -> exp3 .)
    RBRACE          reduce using rule 92 (exp2 -> exp3 .)
    RBRACKET        reduce using rule 92 (exp2 -> exp3 .)
    PLUS            shift and go to state 65
    MINUS           shift and go to state 66


state 27

    (101) exp3 -> exp4 .
    (96) exp4 -> exp4 . MUL exp5
    (97) exp4 -> exp4 . DIV exp5
    (98) exp4 -> exp4 . MOD exp5
    PLUS            reduce using rule 101 (exp3 -> exp4 .)
    MINUS           reduce using rule 101 (exp3 -> exp4 .)
    EQUAL           reduce using rule 101 (exp3 -> exp4 .)
    NOTEQUAL        reduce using rule 101 (exp3 -> exp4 .)
    LESSTHAN        reduce using rule 101 (exp3 -> exp4 .)
    LEQ             reduce using rule 101 (exp3 -> exp4 .)
    GREATERTHAN     reduce using rule 101 (exp3 -> exp4 .)
    GEQ             reduce using rule 101 (exp3 -> exp4 .)
    AND             reduce using rule 101 (exp3 -> exp4 .)
    OR              reduce using rule 101 (exp3 -> exp4 .)
    DOUBLECOLON     reduce using rule 101 (exp3 -> exp4 .)
    SEMICOLON       reduce using rule 101 (exp3 -> exp4 .)
    RPAREN          reduce using rule 101 (exp3 -> exp4 .)
    COMMA           reduce using rule 101 (exp3 -> exp4 .)
    RBRACE          reduce using rule 101 (exp3 -> exp4 .)
    RBRACKET        reduce using rule 101 (exp3 -> exp4 .)
    MUL             shift and go to state 67
    DIV             shift and go to state 68
    MOD             shift and go to state 69


state 28

    (95) exp4 -> exp5 .
    MUL             reduce using rule 95 (exp4 -> exp5 .)
    DIV             reduce using rule 95 (exp4 -> exp5 .)
    MOD             reduce using rule 95 (exp4 -> exp5 .)
    PLUS            reduce using rule 95 (exp4 -> exp5 .)
    MINUS           reduce using rule 95 (exp4 -> exp5 .)
    EQUAL           reduce using rule 95 (exp4 -> exp5 .)
    NOTEQUAL        reduce using rule 95 (exp4 -> exp5 .)
    LESSTHAN        reduce using rule 95 (exp4 -> exp5 .)
    LEQ             reduce using rule 95 (exp4 -> exp5 .)
    GREATERTHAN     reduce using rule 95 (exp4 -> exp5 .)
    GEQ             reduce using rule 95 (exp4 -> exp5 .)
    AND             reduce using rule 95 (exp4 -> exp5 .)
    OR              reduce using rule 95 (exp4 -> exp5 .)
    DOUBLECOLON     reduce using rule 95 (exp4 -> exp5 .)
    SEMICOLON       reduce using rule 95 (exp4 -> exp5 .)
    RPAREN          reduce using rule 95 (exp4 -> exp5 .)
    COMMA           reduce using rule 95 (exp4 -> exp5 .)
    RBRACE          reduce using rule 95 (exp4 -> exp5 .)
    RBRACKET        reduce using rule 95 (exp4 -> exp5 .)


state 29

    (105) exp6 -> MINUS . exp6
    (104) exp6 -> . exp7
    (105) exp6 -> . MINUS exp6
    (106) exp7 -> . exp8
    (107) exp7 -> . ID LBRACKET expprime RBRACKET
    (108) exp8 -> . exp9
    (109) exp8 -> . funcall
    (110) exp9 -> . exp10
    (111) exp9 -> . arraylit
    (112) exp9 -> . ID
    (113) exp9 -> . STRINGLIT
    (114) exp9 -> . BOOLEANLIT
    (115) exp9 -> . FLOATLIT
    (116) exp9 -> . INTLIT
    (77) funcall -> . ID LPAREN explist RPAREN
    (117) exp10 -> . LPAREN exp0 RPAREN
    (78) arraylit -> . LBRACE explist RBRACE
    MINUS           shift and go to state 29
    ID              shift and go to state 22
    STRINGLIT       shift and go to state 38
    BOOLEANLIT      shift and go to state 39
    FLOATLIT        shift and go to state 40
    INTLIT          shift and go to state 41
    LPAREN          shift and go to state 42
    LBRACE          shift and go to state 43

    exp6                           shift and go to state 70
    exp7                           shift and go to state 32
    exp8                           shift and go to state 33
    exp9                           shift and go to state 34
    funcall                        shift and go to state 35
    exp10                          shift and go to state 36
    arraylit                       shift and go to state 37

state 30

    (102) exp5 -> exp6 .
    MUL             reduce using rule 102 (exp5 -> exp6 .)
    DIV             reduce using rule 102 (exp5 -> exp6 .)
    MOD             reduce using rule 102 (exp5 -> exp6 .)
    PLUS            reduce using rule 102 (exp5 -> exp6 .)
    MINUS           reduce using rule 102 (exp5 -> exp6 .)
    EQUAL           reduce using rule 102 (exp5 -> exp6 .)
    NOTEQUAL        reduce using rule 102 (exp5 -> exp6 .)
    LESSTHAN        reduce using rule 102 (exp5 -> exp6 .)
    LEQ             reduce using rule 102 (exp5 -> exp6 .)
    GREATERTHAN     reduce using rule 102 (exp5 -> exp6 .)
    GEQ             reduce using rule 102 (exp5 -> exp6 .)
    AND             reduce using rule 102 (exp5 -> exp6 .)
    OR              reduce using rule 102 (exp5 -> exp6 .)
    DOUBLECOLON     reduce using rule 102 (exp5 -> exp6 .)
    SEMICOLON       reduce using rule 102 (exp5 -> exp6 .)
    RPAREN          reduce using rule 102 (exp5 -> exp6 .)
    COMMA           reduce using rule 102 (exp5 -> exp6 .)
    RBRACE          reduce using rule 102 (exp5 -> exp6 .)
    RBRACKET        reduce using rule 102 (exp5 -> exp6 .)


state 31

    (103) exp5 -> NOT . exp5
    (102) exp5 -> . exp6
    (103) exp5 -> . NOT exp5
    (104) exp6 -> . exp7
    (105) exp6 -> . MINUS exp6
    (106) exp7 -> . exp8
    (107) exp7 -> . ID LBRACKET expprime RBRACKET
    (108) exp8 -> . exp9
    (109) exp8 -> . funcall
    (110) exp9 -> . exp10
    (111) exp9 -> . arraylit
    (112) exp9 -> . ID
    (113) exp9 -> . STRINGLIT
    (114) exp9 -> . BOOLEANLIT
    (115) exp9 -> . FLOATLIT
    (116) exp9 -> . INTLIT
    (77) funcall -> . ID LPAREN explist RPAREN
    (117) exp10 -> . LPAREN exp0 RPAREN
    (78) arraylit -> . LBRACE explist RBRACE
    NOT             shift and go to state 31
    MINUS           shift and go to state 29
    ID              shift and go to state 22
    STRINGLIT       shift and go to state 38
    BOOLEANLIT      shift and go to state 39
    FLOATLIT        shift and go to state 40
    INTLIT          shift and go to state 41
    LPAREN          shift and go to state 42
    LBRACE          shift and go to state 43

    exp5                           shift and go to state 71
    exp6                           shift and go to state 30
    exp7                           shift and go to state 32
    exp8                           shift and go to state 33
    exp9                           shift and go to state 34
    funcall                        shift and go to state 35
    exp10                          shift and go to state 36
    arraylit                       shift and go to state 37

state 32

    (104) exp6 -> exp7 .
    MUL             reduce using rule 104 (exp6 -> exp7 .)
    DIV             reduce using rule 104 (exp6 -> exp7 .)
    MOD             reduce using rule 104 (exp6 -> exp7 .)
    PLUS            reduce using rule 104 (exp6 -> exp7 .)
    MINUS           reduce using rule 104 (exp6 -> exp7 .)
    EQUAL           reduce using rule 104 (exp6 -> exp7 .)
    NOTEQUAL        reduce using rule 104 (exp6 -> exp7 .)
    LESSTHAN        reduce using rule 104 (exp6 -> exp7 .)
    LEQ             reduce using rule 104 (exp6 -> exp7 .)
    GREATERTHAN     reduce using rule 104 (exp6 -> exp7 .)
    GEQ             reduce using rule 104 (exp6 -> exp7 .)
    AND             reduce using rule 104 (exp6 -> exp7 .)
    OR              reduce using rule 104 (exp6 -> exp7 .)
    DOUBLECOLON     reduce using rule 104 (exp6 -> exp7 .)
    SEMICOLON       reduce using rule 104 (exp6 -> exp7 .)
    RPAREN          reduce using rule 104 (exp6 -> exp7 .)
    COMMA           reduce using rule 104 (exp6 -> exp7 .)
    RBRACE          reduce using rule 104 (exp6 -> exp7 .)
    RBRACKET        reduce using rule 104 (exp6 -> exp7 .)


state 33
